  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak. (Rasmus)
- Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
  when calling using Reflection. (Felipe)
- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
  (Felipe)
- Fixed memory leak in openssl_pkcs12_export_to_file(). (Felipe)

- Fixed bug #49990 (SNMP3 warning message about security level printed twice).
  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted
  transaction). (ben dot pineau at gmail dot com, Ilia)  
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49972 (AppendIterator undefined function crash). (Johannes)
- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia, 
  sjoerd at php dot net)
- Fixed bug #49847 (exec() fails to return data inside 2nd parameter, given 
  output lines >4095 bytes). (Ilia)
- Fixed bug #49809 (time_sleep_until() is not available on OpenSolaris). (Jani)
- Fixed Bug #49785 (insufficient input string validation of htmlspecialchars()).
  (Moriyoshi, hello at iwamot dot com)
- Fixed bug #49757 (long2ip() can return wrong value in a multi-threaded
  applications). (Ilia, Florian Anderiasch)
- Fixed bug #48752 (Crash during date parsing with invalid date). (Pierre)
- Fixed bug #49738 (calling mcrypt() after mcrypt_generic_deinit() crashes).
  (Sriram Natarajan)
- Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private 
  property in base class). (Felipe)
- Fixed bug #49698 (Unexpected change in strnatcasecmp()). (Rasmus)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49630 (imap_listscan() function missing). (Felipe)
- Fixed bug #49627 (error_log to specified file does not log time according
  to date.timezone). (Dmitry)
- Fixed bug #49578 (make install-pear fails). (Hannes)
- Fixed bug #49536 (mb_detect_encoding() returns incorrect results when